@@ -1,47 +1,47 @@
 package com.dp_ua.iksparser.api.controller;
 
-import com.dp_ua.iksparser.dba.entity.EventEntity;
-import com.dp_ua.iksparser.dba.dto.EventDto;
-import com.dp_ua.iksparser.dba.service.EventService;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.transaction.Transactional;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import static com.dp_ua.iksparser.api.v1.Variables.API_V1_URI;
+import static com.dp_ua.iksparser.api.v1.Variables.EVENT_URI;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-import static com.dp_ua.iksparser.api.v1.Variables.API_V1_URI;
-import static com.dp_ua.iksparser.api.v1.Variables.EVENT_URI;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import com.dp_ua.iksparser.dba.dto.EventDto;
+import com.dp_ua.iksparser.dba.entity.EventEntity;
+import com.dp_ua.iksparser.dba.service.EventService;
+import com.dp_ua.iksparser.monitor.LogRequestDetails;
+
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 @RestController
 @Slf4j
 @RequestMapping(API_V1_URI)
 @Tag(name = "Event Management")
+@RequiredArgsConstructor
 public class EventController {
-    @Autowired
-    private EventService eventService;
+    private final EventService eventService;
 
     @Operation(summary = "Get event info by id",
             description = "Get event info by id")
     @GetMapping(EVENT_URI + "/{id}")
     @Transactional
+    @LogRequestDetails(parameters = {"id"})
     public ResponseEntity<EventDto> getEventInfo(
-            HttpServletRequest request,
             @Schema(description = "Event id")
             @PathVariable Long id) {
-
-        log.info("URI: {}, id: {} Request from IP: {}, User-Agent: {}",
-                request.getRequestURI(),
-                id,
-                request.getRemoteAddr(),
-                request.getHeader("User-Agent"));
 
         EventEntity event = eventService.findById(id);
         if (event == null) {
@@ -54,21 +54,15 @@ public class EventController {
             description = "Get events by provided list of ids")
     @PostMapping(EVENT_URI + "/list")
     @Transactional
+    @LogRequestDetails(parameters = {"ids"})
     public ResponseEntity<List<EventDto>> getEventsByIds(
-            HttpServletRequest request,
             @RequestBody List<Long> ids) {
-
-        log.info("URI: {}, ids: {} Request from IP: {}, User-Agent: {}",
-                request.getRequestURI(),
-                ids,
-                request.getRemoteAddr(),
-                request.getHeader("User-Agent"));
 
         List<EventDto> events = ids.stream()
                 .map(eventService::findById)
                 .filter(Objects::nonNull)
                 .map(eventService::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         if (events.isEmpty()) {
             return ResponseEntity.notFound().build();
